--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="assets/style.css">
 </head>
 
-<body id="bg-image" classs="container-fluid">
+<body id="bg-image" class="h-100 container-fluid background-image">
 	<div id="weather">
 		Your Weather Template
 	</div>
@@ -30,11 +30,11 @@
 					<input type="text" name="todo">
 					<!-- input -->
 				</form>
-				<ul id="incomplete-tasks">
+				<p id="incomplete-tasks">
 					<!-- <li>
 						<input type="checkbox" name="incomplete-todo">
 					</li> -->
-				</ul>
+				</p>
 			</p>
 		</div>
 	</div>
