--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 	<link rel="stylesheet" href="assets/style.css">
 </head>
 
-<body id="bg-image" class="h-100 container-fluid background-image">
-	<div id="weather">
-		Your Weather Template
+<body id="bg-image" class="h100 container-fluid background-image">
+	<div class="row">
+		<div class="col-9"></div>
+		<div class="col-3 container d-flex justify-content-end align-items-start" id="weather">
+			<!-- <ul>
+				<p>City</p>
+				<p>Weather</p>
+			</ul> -->
+		</div>
 	</div>
-
 	<div id="quote">
 		The Quote
 	</div>
