--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</form>
 				<div class="form-check">
 					<p id="incomplete-tasks"></p>
-					<p>Left to Do: </p>
+					<p>Left to Do: <span id="incomplete-count"></span></p>
 				</div>
 			</p>
 		</div>
